--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 <head>
   <meta charset="utf-8">
-
+<head>
   <title>12.6</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-  <h1>Country search engine</h1>
-  <button id="search">Search a country</button>
-  <input id="country-name" type="text" />
-  <h2>List of countries</h2>
-  <ul id="countries">
-    <li>No data</li>
-  </ul>
+  <div class="container">
+    <h1>Country search engine</h1>
+    <button id="search">Search a country</button>
+    <input id="country-name" type="text" placeholder="Type here"/>
+    <h2>List of countries</h2>
+    <ul id="countries">
+      <li>Type data</li>
+    </ul>
+  </div>
   <script src="js/script.js"></script>
 </body>
 </html>
